--- a/VehicleDetect.ipynb
+++ b/VehicleDetect.ipynb
@@ -359,12 +359,6 @@
     "    # Return the image\n",
     "    return img\n",
     "\n",
-    "def load_image_names(folder) :\n",
-    "    return glob.glob(folder + '/*.png')\n",
-    "\n",
-    "def saveImg(folder, image, idx) :\n",
-    "    scipy.misc.imsave('video_images/' + folder + '/video' + str(idx) + '.jpg', image) \n",
-    "\n",
     "def smooth(heatmap) :\n",
     "    min = np.min(heatmap)\n",
     "    max = np.max(heatmap)\n",
@@ -449,12 +443,8 @@
     "for folder in folders :\n",
     "    notcars = notcars + load_image_names('training_images/non-vehicles/' + folder)\n",
     "\n",
-    "print(len(cars), len(notcars))\n",
-    "\n",
     "random.shuffle(cars)\n",
-    "random.shuffle(notcars)\n",
-    "\n",
-    "print(\"loaded\")"
+    "random.shuffle(notcars)"
    ]
   },
   {
@@ -592,9 +582,9 @@
     "\n",
     "\n",
     "t2 = time.time()\n",
-    "print(round(t2-t, 2), 'Seconds to train MLPClassifier...')\n",
+    "print(round(t2-t, 2), 'Seconds to train Classifier...')\n",
     "# Check the score of the SVC\n",
-    "print('Test Accuracy of MLPClassifier = ', round(clf.score(X_test, y_test), 4))\n",
+    "print('Test Accuracy of Classifier = ', round(clf.score(X_test, y_test), 4))\n",
     "\n",
     "print(\"Done\")"
    ]
@@ -626,9 +616,7 @@
     "\n",
     "    y_start_stop = [400, int(y_end * sample_image.shape[0])]\n",
     "    windows.extend(slide_window(sample_image, x_start_stop=x_start_stop, y_start_stop=y_start_stop, \n",
-    "                    xy_window=size, xy_overlap=(overlap, overlap))) \n",
-    "\n",
-    "print(\"Window size\", len(windows))"
+    "                    xy_window=size, xy_overlap=(overlap, overlap))) "
    ]
   },
   {
@@ -645,10 +633,8 @@
     "boxes = []\n",
     "project_output = 'output_images/project_output.mp4'\n",
     "clip1 = VideoFileClip('project_video.mp4')\n",
-    "#clip1 = VideoFileClip(\"project_video.mp4\").subclip(26,29)\n",
     "#project_clip = clip1.fl_image(detectImage) #NOTE: this function expects color images!!\n",
     "\n",
-    "#project_clip = clip1.fl_image(testImg) #NOTE: this function expects color images!!\n",
     "#%time project_clip.write_videofile(project_output, audio=False)"
    ]
   },
